<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="enter_pin">Enter Pin:</string>
    <string name="app_name">Barada</string>
<string name="password">One Time Password</string>
<string name="generate">Generate</string>
<string name="invalid_pin_text">Invalid Pin</string>
<string name="password_dialog_title">Current Password</string>
<string name="non_integer_pin">pin must be a number</string>
<string name="new_key">Reset Secret Key</string>
<string name="key_gen_check_title">Set New Key?</string>
<string name="key_gen_check_message">Are you sure you want to set a new secret key?  This will erase your current secret key!</string>
<string name="new_key_confirm">Set New Key</string>
<string name="enter_key">Enter Key:</string>
<string name="new_key_cancel">Cancel</string>

<string name="cancel">Cancel</string>
<string name="confirm">Save</string>
<string name="no_profile">You must specify a profile name.</string>
<string name="edit_profile">Add/Edit Profile</string>
<string name="enter_profile">Profile Name:</string>
<string name="profile_add">Add Profile</string>
<string name="profile_delete">Delete Profile</string>
<string name="version_name">1.0.4</string>
<string name="about_barada">Barada is a two-factor authentication system for authenticating users to servers.  Similar to systems like RSA\u0027s SecureID, it allows you to authenticate to servers by combining something you have (your phone) with something you know (your PIN), which generates a unique password each time you log in to a server.  If an attacker sniffs keystrokes from the computer you\u0027re using, or is otherwise able to capture your password in transit, it does them no good.\n</string>
<string name="using_barada">To use barada, it will also need to be configured on whichever servers you are authenticating to.  If you administer the server yourself, see http://barada.sourceforge.net for information on downloading and installing a Barada PAM module.  Otherwise, contact your administrator about getting Barada credentials.\n\nOnce you have the Barada credentials, all you need to do here is create a profile for that account and enter the 128bit barada key you received from the server.\n\nAccessing that profile using barada\u0027s two-factor authentication from then on is as simple as entering your PIN.\n\nCreate your profile now by clicking the Menu button."</string>
<string name="use_profile">Enter your PIN:</string>
</resources>
