<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/enter_pin" />
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<EditText android:id="@+id/pin" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:password="true"
			android:layout_weight="1" />
		<Button android:id="@+id/generate" android:text="@string/generate"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
	</LinearLayout>
	<Button android:id="@+id/new_key" android:text="@string/new_key"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />
</LinearLayout>
